# Dynamic_Analysis

./: CMakeLists.txt  a.bc  a.ll  cmake_install.cmake  code.bc  code.cpp  code.ll  example.txt  welcome.cpp  welcome.linked.bc
DA/: CMakeLists.txt  CountDynamicInstructions.cpp  Pass2.cpp
